--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ body{
   background-image: url(https://thumbs.dreamstime.com/b/fundo-da-obscuridade-do-hacker-da-matriz-vetor-86112088.jpg);
   background-origin: border-box;
   background-size:cover;
+  position: fixed;
   
 }
 .container {
@@ -35,7 +36,7 @@ body{
   border: #32CD32 solid 2px;
   padding: 3.7px;
   border-radius: 60%;
-  margin-top: 23px;
+  margin-top: 83px;
 
 }
 .name {
